# keogami

./: .gitignore  README.md  astro.config.mjs  experience.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
examples/rkyv-embedding/: Cargo.toml  build.rs
examples/rkyv-embedding/shared/: Cargo.toml
examples/rkyv-embedding/src/: main.rs
examples/rkyv-embedding/types/: Cargo.toml
examples/rkyv-embedding/types/src/: lib.rs
public/: prism.css
public/shaders/: voronoi.fragment.glsl  voronoi.vertex.glsl
src/components/: BgAnimation.svelte  BlogNav.astro  PostSummary.astro  posthog.astro
src/content/: config.ts
src/content/blog/: dategen.md  jibril-part1.md  planting-a-tree-in-a-rust-binary.md  test.md
src/layouts/: Blog.astro  Common.astro
src/pages/: about.astro  index.astro
src/pages/blog/: [...slug].astro  index.astro
src/pages/blog/tags/: [tag].astro
src/scripts/: voronoi.ts
src/styles/: global.css
