[package]
name = "rkyv-embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "./types" }
rkyv = { version = "0.8.15", default-features = false, features = ["alloc"] }
anyhow = "1.0.102"
const_format = "0.2.35"

[build-dependencies]
types = { path = "./types" }
rkyv = { version = "0.8.15", default-features = false, features = ["alloc"] }
anyhow = "1.0.102"
